<resources>
    <string name="app_name">Ripetizioni</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_corsi">Corsi</string>
    <string name="title_prenotazioni">Agenda</string>
    <string name="title_nuova_prenotazione">Prenota</string>
    <string name="title_profilo">Profilo</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login_enabled">Login</string>
    <string name="corso">Corso</string>
    <string name="descrizione">Descrizione</string>
    <string name="seleziona">Seleziona</string>
    <string name="textview">TextView</string>

</resources>
