<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/corsi"
            android:icon="@drawable/ic_book_open_page_variant"
            android:title="@string/title_corsi"
            />
        <item android:id="@+id/prenotazioni"
            android:icon="@drawable/ic_view_agenda"
            android:title="@string/title_prenotazioni"
            />
        <item android:id="@+id/nuovaPrenotazione"
            android:icon="@drawable/ic_plus_circle"
            android:title="@string/title_nuova_prenotazione"
            />
        <item android:id="@+id/account"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/title_profilo"
            />
    <item android:id="@+id/login"
        android:icon="@drawable/ic_login"
        android:title="Login"
        />
    </menu>
